# zenofewords

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  deno.json  docker-compose.yml  makefile  manage.py  package.json  planbakcup  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  webpack.config.js  webpack.dev.js  webpack.prod.config.js  webpack.prod.js
.github/workflows/: ci.yml  deploy.yml
deploy/: Caddyfile  droplet-setup.sh  zenofewords.service
static/css/: styles.css
static/favicon/: browserconfig.xml  site.webmanifest
static/javascript/: base.js  home.js  homepage.js  main.js  pages.js  queries.js  thoughts.js
static/sass/: base.sass  home.sass  homepage.sass  main.sass  pages.sass  queries.sass  variables.sass
static/ts/: main.ts  main_test.ts
tests/: test_permissions.py  test_views.py  utils.py
zenofewords/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
zenofewords/templates/zenofewords/: base.html  bio.html  contact.html  home.html  homepage.html  pages.html  personal.html  professional.html  ramblings.html  thoughts.html  work.html
zenofewords/templates/zenofewords/tags/: content_block_tag.html  external_link_tag.html  jump_to_link_tag.html  mobile_menu_link_tag.html
zenofewords/templatetags/: zenofewords_tags.py
