[project]
name = "zenofewords"
version = "0.1.0"
description = "Personal space for hobby projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "zenofewords.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["*/migrations/", "manage.py"]

[tool.ruff.lint]
extend-select = ["I", "UP"]
